--- a/src/app/page/view-profile/view-profile.component.html
+++ b/src/app/page/view-profile/view-profile.component.html
@@ -1,86 +1,86 @@
 <div class="h-100 d-flex">
     <app-side-menu class="side_menu"></app-side-menu>
-<section class="w-100 p-4 mt-5 profile_component">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-12 card">
-                <div class="card-header-danger">
-                    <h4 class="mb-1">View Profile</h4>
-                    <p class="mb-0">Complete your profile</p>
-                </div>
-                <form #profileForm="ngForm" (ngSubmit)="updateProfile(profileForm.value)">
-                   
-                <div class="row">
-                    <div class="col-md-6">
-                        <div>
-                            <mat-form-field class="form-field" appearance="outline">
-                                <mat-label>Name</mat-label>
-                                <input [(ngModel)]="log_name" minlength="3" name="name" type="text" matInput readonly
-                                    placeholder="Enter Name" />
-                            </mat-form-field>
-                        </div>
-                        <div>
-        
-                            <mat-form-field class="form-field" appearance="outline">
-                                <mat-label>Email</mat-label>
-                                <input [(ngModel)]="log_email" required #email="ngModel" name="email" type="email" matInput
-                                    readonly placeholder="Enter Email"
-                                    pattern="[a-zA-Z0-9.-_]{1,}@[a-zA-Z.-]{2,}[.]{1}[a-zA-Z]{2,}">
-                            </mat-form-field>
-                        </div>
-                        <div>
-                            <mat-form-field class="form-field" appearance="outline">
-                                <mat-label>UserName</mat-label>
-                                <input minlength="8" [(ngModel)]="log_useName" required #userName="ngModel" name="userName"
-                                    type="text" matInput placeholder="Enter UserName">
-                            </mat-form-field>
-                        </div>
+    <section class="w-100 p-4 mt-5 profile_component">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-12 card">
+                    <div class="card-header-danger">
+                        <h4 class="mb-1">View Profile</h4>
+                        <p class="mb-0">Complete your profile</p>
                     </div>
-                    <div class="col-md-6">
-                        <div>
-                            <mat-form-field class="form-field" appearance="outline">
-                                <mat-label>Profile</mat-label>
-                                <input [(ngModel)]="log_profile" #profile="ngModel" name="profile" type="text" matInput
-                                    readonly>
-        
-                            </mat-form-field>
-                        </div>
-                        <div>
-                            <mat-form-field class="form-field" appearance="outline">
-                                <mat-label>Roles</mat-label>
-                                <mat-select name="roles" #roless="ngModel" [(ngModel)]="log_roles" multiple>
-                                    <mat-option disabled *ngFor="let role of roles" [value]="role.roleName">
-                                        {{role.roleName}}
-                                    </mat-option>
-                                </mat-select>
-        
-                            </mat-form-field>
-                            <div *ngIf="roless.touched && roless.invalid" class="alert alert-danger">
-                                <div *ngIf="roless.errors?.['required']">
-                                    At least one role is required.
+                    <form #profileForm="ngForm" (ngSubmit)="updateProfile(profileForm.value)">
+
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div>
+                                    <mat-form-field class="form-field" appearance="outline">
+                                        <mat-label>Name</mat-label>
+                                        <input [(ngModel)]="log_name" minlength="3" name="name" type="text" matInput
+                                            readonly placeholder="Enter Name" />
+                                    </mat-form-field>
+                                </div>
+                                <div>
+
+                                    <mat-form-field class="form-field" appearance="outline">
+                                        <mat-label>Email</mat-label>
+                                        <input [(ngModel)]="log_email" required #email="ngModel" name="email"
+                                            type="email" matInput readonly placeholder="Enter Email"
+                                            pattern="[a-zA-Z0-9.-_]{1,}@[a-zA-Z.-]{2,}[.]{1}[a-zA-Z]{2,}">
+                                    </mat-form-field>
+                                </div>
+                                <div>
+                                    <mat-form-field class="form-field" appearance="outline">
+                                        <mat-label>UserName</mat-label>
+                                        <input minlength="8" [(ngModel)]="log_useName" required #userName="ngModel"
+                                            name="userName" type="text" matInput placeholder="Enter UserName">
+                                    </mat-form-field>
                                 </div>
                             </div>
-                        </div>
-        
-                        <!-- <div class="">
+                            <div class="col-md-6">
+                                <div>
+                                    <mat-form-field class="form-field" appearance="outline">
+                                        <mat-label>Profile</mat-label>
+                                        <input [(ngModel)]="log_profile" #profile="ngModel" name="profile" type="text"
+                                            matInput readonly>
+
+                                    </mat-form-field>
+                                </div>
+                                <div>
+                                    <mat-form-field class="form-field" appearance="outline">
+                                        <mat-label>Roles</mat-label>
+                                        <mat-select name="roles" #roless="ngModel" [(ngModel)]="log_roles" multiple>
+                                            <mat-option disabled *ngFor="let role of roles" [value]="role.roleName">
+                                                {{role.roleName}}
+                                            </mat-option>
+                                        </mat-select>
+
+                                    </mat-form-field>
+                                    <div *ngIf="roless.touched && roless.invalid" class="alert alert-danger">
+                                        <div *ngIf="roless.errors?.['required']">
+                                            At least one role is required.
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!-- <div class="">
                             <div class="mb-4">
                                 <a class="btn btn-block" mat-raised-button color="primary" [routerLink]="'/page/home'">Back to Home</a>
                             </div>
                         </div> -->
-                    </div>
-                </div>
-                
-                    <!-- <div>
+                            </div>
+                        </div>
+
+                        <!-- <div>
                             <mat-form-field class="form-field" appearance="outline">
                                 <mat-label>Password</mat-label> 
                                 <input minlength="8" [(ngModel)]="log_password" required #password="ngModel" name="password" type="password" matInput
                                     placeholder="Enter Password">
                             </mat-form-field>
                            </div> -->
-                   
-                </form>
+
+                    </form>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 </div>
