--- a/src/app/page/topic-view/topic-view.component.html
+++ b/src/app/page/topic-view/topic-view.component.html
@@ -11,7 +11,8 @@
             <div class="d-flex justify-content-between align-items-center">
               <h4 class="card-title mb-0">Topic List</h4>
               <div>
-                <a *ngIf="check" mat-raised-button [routerLink]="'/page/topic'">Add Topic</a>
+                <a *ngIf="check" class="mr-1" mat-raised-button [routerLink]="'/page/topic'">Add Topic</a>
+                <a  mat-raised-button [routerLink]="'/page/viewCourse'">Back to Home</a>
               </div>
             </div>
           </div>
