--- a/src/app/page/view-profile/view-profile.component.html
+++ b/src/app/page/view-profile/view-profile.component.html
@@ -13,27 +13,6 @@
                             <h4 class="mb-1">View Profile</h4>
                             <p class="mb-0">Complete your profile</p>
                         </div>
-
-
-
-                        <!-- <form [formGroup]="myFormGro">
-                            <div>
-                                <ng-multiselect-dropdown
-                                    name="roles"
-                                    [placeholder]="'Select Role'"
-                                    [data]="roles"
-                                    formControlName="roles"
-                                    [disabled]="disabled"
-                                    [settings]="dropdownSettings"
-                                    (onSelect)="onItemSelect($event)">
-                                </ng-multiselect-dropdown>
-                            </div>
-                        </form> -->
-
-
-
-
-
                         <form #profileForm="ngForm" (ngSubmit)="updateProfile(profileForm.value)">
     
                             <div class="row px-3">
@@ -62,6 +41,14 @@
                                     </div>
                                 </div>
                                 <div class="col-md-6">
+                                    <div>
+                                        <mat-form-field class="form-field" appearance="outline">
+                                            <mat-label>Password</mat-label>
+                                            <input minlength="8" [(ngModel)]="log_password" required #password="ngModel"
+                                                name="password" type="password" matInput placeholder="Enter Password">
+                                            
+                                        </mat-form-field>
+                                    </div>
                                     <div class="form-group">
                                         <select class="form-control"  name="profile" #profile="ngModel" [(ngModel)]="log_profile">
                                             <option *ngFor="let profile of coursesList" [value]="profile.courseName" [selected]="log_profile === profile.value">
