--- a/src/app/page/view-profile/view-profile.component.html
+++ b/src/app/page/view-profile/view-profile.component.html
@@ -8,7 +8,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12">
-                    <div class="card">
+                    <div class="card pb-4">
                         <div class="card-header-danger">
                             <h4 class="mb-1">View Profile</h4>
                             <p class="mb-0">Complete your profile</p>
@@ -56,7 +56,7 @@
                                             </option>
                                         </select>
                                     </div>
-                                    <div>
+                                    <div class="form-group">
                                         <ng-multiselect-dropdown
                                     name="roles"
                                     [placeholder]="'Select Role'"
