--- a/src/styles.css
+++ b/src/styles.css
@@ -18,3 +18,19 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     background-color: #6052e2 !important;
     letter-spacing: 1px;
 }
+
+.selected-item-container .selected-item {
+    border: 1px solid #1904e5 !important;
+    background: #1904e5 !important;
+    padding: 0 9px !important;
+    max-width: 135px !important;
+}
+
+.multiselect-item-checkbox input[type=checkbox]:checked + div:before {
+    background: #1904e5 !important;
+}
+
+.multiselect-item-checkbox input[type=checkbox] + div:before {
+    color: #1904e5 !important;
+    border: 2px solid #1904e5 !important;   
+}
