--- a/src/styles.css
+++ b/src/styles.css
@@ -34,3 +34,22 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     color: #1904e5 !important;
     border: 2px solid #1904e5 !important;   
 }
+
+.profile_component select.form-control:not([size]):not([multiple]) {
+    height: calc(3rem + 1px);
+    margin-top: 5px;
+}
+.profile_component .multiselect-dropdown{
+    margin-top: 30px;
+}
+.profile_component .multiselect-dropdown .dropdown-btn{
+    height: calc(3rem + 1px);
+    margin-top:14px;
+    display: flex !important;
+    align-items: center;
+}
+
+.profile_component .multiselect-dropdown .dropdown-btn .dropdown-multiselect__caret{
+
+    top:6px !important;
+}
