--- a/src/app/page/view-profile/view-profile.component.html
+++ b/src/app/page/view-profile/view-profile.component.html
@@ -1,8 +1,8 @@
 <section class="profile_component">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-12">
-                <div class="card pb-4">
+            <div class="col-md-12 reused_table_header">
+                <div class="card p-3">
                     <div class="card-header-danger">
                         <h4 class="mb-1">View Profile</h4>
                         <p class="mb-0">Complete your profile</p>
