--- a/src/app/page/view-course/view-course.component.html
+++ b/src/app/page/view-course/view-course.component.html
@@ -4,7 +4,7 @@
       <div class="card">
         <div class="card-header card-header-warning">
           <div class="d-flex justify-content-between align-items-center">
-            <h4 class="card-title mb-0 ">Course Listt</h4>
+            <h4 class="card-title mb-0 ">Course List</h4>
             <div>
               <a *ngIf="check" mat-raised-button [routerLink]="'/page/course'">Add Course</a>
             </div>
