--- a/src/app/page/perform-question/perform-question.component.html
+++ b/src/app/page/perform-question/perform-question.component.html
@@ -4,7 +4,7 @@
             <div class="card">
                 <div class="card-header card-header-warning">
                     <div class="d-flex justify-content-between align-items-center">
-                        <h4 class="card-title mb-0">Questions Table</h4>
+                        <h4 class="card-title mb-0">Questions List</h4>
                         <div>
                             <a class="navLink ml-5" mat-raised-button [routerLink]="'/page/home'">Back to
                                 Home</a>
@@ -22,7 +22,8 @@
                     <tbody>
                         <tr *ngFor="let question of questions">
                             <td>{{question.id}}</td>
-                            <td><a class="navLink ml-5"
+                            <td>
+                                <a class="badge badge-info p-2 text-white mr-2"
                                     [routerLink]="['/page/solveQuestion/'+question.id]">{{question.question}}</a>
                             </td>
                             <td>status</td>
