--- a/src/app/page/solve-question/solve-question.component.html
+++ b/src/app/page/solve-question/solve-question.component.html
@@ -2,22 +2,21 @@
     <div class="row">
         <div class="col-md-12 reused_table_header">
             <div class="card p-3">
-                <div class="card-header-danger">
+                <div class="card-header card-header-warning">
                     <div class="d-flex justify-content-between align-items-center">
-                        <h2 class="text-center">Add Topic</h2>
+                        <h2 class="card-title mb-0">Add Topic</h2>
                         <div>
                             <button mat-raised-button (click)="backButton()">Back To Questions</button>
                         </div>
                     </div>
                 </div>
-                <form #topicForm="ngForm" (ngSubmit)="solveQuestion(topicForm.value)">
-                    <mat-form-field class="form-field" appearance="outline">
+                <form #topicForm="ngForm" class="mt-4" (ngSubmit)="solveQuestion(topicForm.value)">
+                    <mat-form-field class="form-field w-100" appearance="outline">
                         <mat-label>User Id</mat-label>
                         <input #courses [(ngModel)]="loggedInUserId" name="userId" type="text" matInput
                             placeholder="Enter Topic">
-                        <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
                     </mat-form-field>
-                    <mat-form-field class="form-field" appearance="outline">
+                    <mat-form-field class="form-field w-100" appearance="outline">
                         <mat-label>Status</mat-label>
                         <mat-select name="status" [(ngModel)]="questionStatus.status">
                             <mat-option *ngFor="let stat of status" [value]="stat.statusValue">
@@ -26,7 +25,7 @@
                         </mat-select>
                     </mat-form-field>
 
-                    <div class="container text-center">
+                    <div class="text-right">
                         <div class="example-button-row">
                             <button type="submit" class="btn " mat-raised-button color="primary">Solve Question</button>
                            
